# Codex-Runner

./: .gitignore  AGENTS.md  CHANGELOG.md  EVALUATION-LICENSE.md  MANIFEST.in  Makefile  README.md  SAFETY.md  pyproject.toml
.github/workflows/: ci.yml
.promptnomicon/: project-reality-footer.md  promptnomicon-steward-session.md  promptnomicon-steward.md
docs/guardian/: GUARDIAN_OPERATING_CONTRACT_V0.md  GUARDIAN_OPERATIONAL_CONTRACT_ADDENDUM_V0.md  GUARDIAN_PLAN_PACK_VALIDATOR_OPERATOR_RUNBOOK.md  GUARDIAN_UI_COMMAND_SURFACE_CONTRACT_V0.md  README.md
docs/guardian/templates/: AUTHORIZATION.md  (+7 more)
docs/review/: CODEX_RUNNER_GENERATED_ARTIFACT_HYGIENE.md  CODEX_RUNNER_SCANNER_SPINE_REVIEW_CHECKPOINT.md
examples/: example-loop-task.yaml
scripts/: smoke_test.sh
skills/codex-runner-delegation/: SKILL.md
src/codex_runner/: mcp_server.py  runner.py  tui_app.py  tui_commands.py
tests/: conftest.py  test_artifact_paths.py  test_codex_cli_compatibility.py  test_guardian_orchestration.py  test_guardian_plan_pack_validator.py  test_guardian_repo_boundary.py  test_loop_adr_policy.py  test_loop_contracts.py  test_loop_docs_policy.py  test_loop_gate_graph.py  test_loop_receipt_report.py  test_loop_retry_policy.py  test_loop_runner.py  test_mcp_server.py  test_provider_dispatch.py  test_runner_entry.py  test_tui_commands.py  test_tui_palette.py  test_tui_state.py
tests/fixtures/: guardian_plan_pack_validator_json_invalid.json  guardian_plan_pack_validator_json_valid.json  loop_receipt_v0.json  loop_receipt_v1.json  receipt_report_json_v0.json  receipt_report_json_v1.json
(+48 files in other folders)
