[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-runner-friend-share"
version = "0.1.0a0"
description = "Private-alpha deterministic Codex Runner package for trusted friend share"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
tui = ["textual>=0.70.0"]
dev = ["pytest>=8.0", "build>=1.2"]

[project.scripts]
codexrun = "codex_runner.runner:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_runner = ["prompts/*.md", "schemas/*.json", "templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
